SBVTestSuite/TestSuite/THFailures/Files/SCase05.hs
{-# LANGUAGE QuasiQuotes #-}

module SCase05 where

import Expr
import Data.SBV

-- bad syntax
t :: SExpr -> SInteger
t e = [sCase|Expr e + 1|]
